# jifmaker

./: README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  general_question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
gifmaker/: __init__.py
jifmaker/: main.py
tests/: test_basic.py
