[project]
name = "jifmaker"
version = "0.1.0"
description = "PyQT5 application to convert media into GIF files"
authors = ["Jordan Pierce <jordan.pierce@noaa.gov>"]
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
FFmpeg = "https://ffmpeg.org/download.html"

[tool.ruff.lint]
external = [
    "FFmpeg is required and must be available in system PATH",
]
dependencies = [
    "PyQt5",
    "imageio",
    "Pillow"
]

[project.scripts]
jifmaker = "jifmaker.main:main"
