[project]
name = "jifmaker"
version = "0.1.0"
description = "PyQT5 application to convert media into GIF files"
authors = [
    {name = "Jordan Pierce", email = "jordan.pierce@noaa.gov"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "PyQt5",
    "imageio",
    "Pillow"
]

[project.urls]
FFmpeg = "https://ffmpeg.org/download.html"

[project.scripts]
jifmaker = "jifmaker.main:main"
