[metadata]
name = jifmaker
version = attr: jifmaker.__version__
author = Jordan Pierce
author_email = jordan.pierce@noaa.gov
description = PyQt5 application to convert media into GIF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jordan-Pierce/jifmaker
project_urls =
    Bug Tracker = https://github.com/Jordan-Pierce/jifmaker/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Environment :: X11 Applications :: Qt
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Multimedia :: Video :: Conversion

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    PyQt5>=5.15.0
    Pillow>=9.0.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    jifmaker = jifmaker.main:main
